# roshydb

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac  flake.nix
include/roshydb/: version.hpp
src/: Makefile.am  main.cpp  version.cpp
tests/: Makefile.am  version_test.cpp
